php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #30519 Interface not existing says Class not found
Submitted: 2004-10-21 20:48 UTC Modified: 2005-08-04 13:05 UTC
Votes:4
Avg. Score:3.0 ± 2.0
Reproduced:3 of 3 (100.0%)
Same Version:3 (100.0%)
Same OS:2 (66.7%)
From: jsgoupil at lookstrike dot com Assigned: dmitry (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 5CVS-2005-06-19 OS: *
Private report: No CVE-ID: None
 [2004-10-21 20:48 UTC] jsgoupil at lookstrike dot com
Description:
------------
If you specify an interface that not exists to a class, the output error is saying a "wrong" message...

Reproduce code:
---------------
<?php
class test implements a {

}
?>

Expected result:
----------------
Fatal error: Interface 'a' not found in D:\www\LookStrike\ls_lite\a.php on line 2

Actual result:
--------------
Fatal error: Class 'a' not found in D:\www\LookStrike\ls_lite\a.php on line 2

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-06-24 10:46 UTC] dmitry@php.net
Fixed in CVS HEAD and PHP_5_0.
 [2005-08-04 06:10 UTC] jsgoupil@php.net
Reproducible in 5.1.0b2
 [2005-08-04 09:14 UTC] sniper@php.net
Works as expected with latest CVS snapshot. DO NOT REOPEN BUGS if you HAVE NOT tested with LATEST CVS!!!!
 [2005-08-04 13:05 UTC] jsgoupil@php.net
Sorry, I saw PHP_5_0, I was thinking that PHP_5_1 was existing... or something like that.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC