Fixed bug #30519 (Interface not existing says Class not found)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@189133 c90b9560-bf6c-de11-be94-00142212c4b1